feat: Create products crud

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     build: ./server
     ports:
       - "3000:3000"
+    volumes:
+      - ./server:/usr/src/app
     env_file:
       - .env
     depends_on:
