--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,9 +17,8 @@ services:
     env_file:
       - .env
     depends_on:
-      - db
-    command: >
-      sh -c "npm run migration:run"
+      db:
+        condition: service_healthy
 
   db:
     image: postgres:17
@@ -29,6 +28,11 @@ services:
       - POSTGRES_DB=${DB_DATABASE}
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USERNAME} -d ${DB_DATABASE}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
 volumes:
   postgres_data:
